Fix holes in device index space. PR#1028